fix enpoint report and add documentation
